--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,13 @@
 * Browsers: last 4 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 
 
 :root{
@@ -142,7 +149,8 @@ position: relative;
     width: 124px;
     list-style: none;
     padding: 0;
-    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
     
 }
 .site-header-nav-inner-item {
